src/test/resources/type/bad/append-1.ml
x = []

x.append(2.2)

x.append("hello") // error: expected type 'int' but got 'str'